Added more to intro, changed some headings/layout

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -14,3 +14,13 @@
     year =         "2014",
     DOI =          "10.1109/JSAC.2014.2328098"
 }
+
+@article{tomfarhist,
+    author =       "Tom Farley",
+    title =        "Mobile Telephone History",
+    journal =      "Telektronikk",
+    volume =       "101",
+    number =       "3/4",
+    pages =        "22-34",
+    year =         "2006"
+}
