--- a/main.tex
+++ b/main.tex
@@ -21,35 +21,38 @@ This will be the abstract - short passage, intro, basic ideas, what review will 
 5G, telecommunications, networks, (will amend when review finished).
 \end{IEEEkeywords}
 
-
 \section{Introduction}
-In recent years, particularly the last decade, the mobile telecommunications industry has enjoyed rapid growth and countless advancements in its technology. From the introduction of first generation wireless cellular technology (1G) in the 1980s, right up to the fourth generation (4G) available in most countries around the world today, we have seen exponential improvement in services. Since the first mobile phone call was made in 1973, the way we share information and communicate with one another has changed dramatically. With the introduction of social media in particular, we are now generating massive amounts of data and require more robust networks to handle such data. It was estimated in\cite{whatwill5gbe}, that the amount of IP data handled by wireless networks would increase from around 3 exabytes in 2010, to 190 exabytes in 2018. This level of data, coupled with an estimated 20 billion devices connected to the internet in 2017\cite{ihsmarkit} and that number set to increase constantly, means our networks are facing a worldwide shortage in bandwidth.
+In recent years, particularly the last decade, the mobile telecommunications industry has enjoyed rapid growth and countless advancements in its technology. From the introduction of first generation wireless cellular technology (1G) in the 1980s, right up to the fourth generation (4G) available in most countries around the world today, we have seen exponential improvement in services.\\
+Since the momentous event of the first mobile phone call over a cellular network in 1973 \cite{tomfarhist}, the way we share information and communicate with one another has changed dramatically. Technology now surrounds us in everyday life, with the smartphone being the device of choice for most of the developed world. We expect to almost always be connected, and also be provided with fast communication speeds and a reliable connection with little to no down-time. With the introduction of social media in particular, we are now generating massive amounts of data and require more robust networks to handle such data. In \cite{whatwill5gbe}, Andrews et al claim that the amount of IP data handled by wireless networks would increase from around 3 exabytes in 2010, to 190 exabytes in 2018. Our current demands and expectations regarding data creation and transfer, coupled with an estimated 20 billion devices connected to the internet in 2017 \cite{ihsmarkit} and that number set to increase exponentially, means our networks are facing a worldwide shortage in bandwidth.\\
+In this literature review, we will first discuss briefly the history of mobile communications, as well as current technologies in the fourth generation of mobile communications standards. The review will focus mainly on proposed key technologies for the fifth generation (5G) of standards, and the possible applications of 5G.
 
-%\subsection{Predecessors}
-%Might leave section out.
-%https://www.edn.com/electronics-blogs/edn-moments/4411258/1st-mobile-phone-call-is-made--April-3--1973
-%1G - the first phones, being able to make a phone call.\\
-%2G - slightly smaller devices, could send text messages.\\
-%3G - first smartphones, could handle basic internet/webpages etc.\\
-%4G - advanced smartphones, very fast - personal tests on phone peak at 70mbps download speed, average at around 15mbps.\\
-%\subsection{More Detail on Current/4G Technology?}
+\subsection{A Brief History}
+First phone call, maybe brief description of each generation / changes they brought. Milestones like text messaging/internet on phones/smartphones.
+% Previous Generations
+% https://www.edn.com/electronics-blogs/edn-moments/4411258/1st-mobile-phone-call-is-made--April-3--1973
+% 1G - the first phones, being able to make a phone call.
+% 2G - slightly smaller devices, could send text messages.
+% 3G - first smartphones, could handle basic internet/webpages etc.
+% 4G - advanced smartphones, very fast - personal tests on phone peak at 70mbps download speed, average at around 15mbps.
+\subsection{Current Technologies}
+Probably short, discuss 4G and technologies, focus on problems, lack of bandwidth etc - how to make more room / handle more at the same time etc. More devices = slower / more crowded.
+
+\section{5G and its Proposed Technologies}
 \subsection{What is 5G?}
-
-
-
-\section{Proposed Technologies}
-Talk about technologies etc. Might get rid of subsections or reduce them down (MMWaves \& Small Cell can be tied together, same with MIMO \& Beamforming).
 \subsection{Millimetre Waves}
-\subsection{Small Cell Networks}
-\subsection{MIMO: Multiple Input Multiple Output}
+\subsection{Small Cells}
+\subsection{Massive MIMO: Multiple Input Multiple Output}
 \subsection{Beamforming}
 \subsection{Full Duplex}
+\subsection{Problems Facing 5G}
+Might make this into section of its own, or tie with use cases as subsections of "Future of 5G" or similar.
+Cost, infrastructure etc. Companies / investment. Rural / cities. Health hazards. Refer to presentation notes.
 
-\section{When Will 5G Arrive? / Future of 5G}
-Cost, infrastructure etc. Might change to subsection of some other bigger section including this and companies/investment, maybe future of 5G.
-\subsection{Companies/Investment/Main Contributors?}
-
-\subsection{Problems / Criticisms Section?}
+\section{Use Cases for 5G}
+\subsection{In Personal Life}
+Gaming, streaming, IoT / smart homes, always connected.
+\subsection{The Bigger Picture}
+Education, business / agriculture / monitoring, transport (autonomous), medical.
 
 \section{Conclusion}
 
