Added brief history, starting 4G

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -5,6 +5,8 @@
 }
 
 @article{whatwill5gbe,
+% times cited: 2420~
+% Jeffrey G. Andrews et al
     author =       "J. Andrews et al",
     title =        "What Will 5G Be?",
     journal =      "IEEE Journal on Selected Areas in Communications",
@@ -16,11 +18,28 @@
 }
 
 @article{tomfarhist,
-    author =       "Tom Farley",
+% times cited: 90~
+% Tom Farley
+    author =       "T. Farley",
     title =        "Mobile Telephone History",
     journal =      "Telektronikk",
     volume =       "101",
     number =       "3/4",
     pages =        "22-34",
     year =         "2006"
+}
+
+@article{evolution,
+% times cited: 50~
+% Pankaj Sharma
+    author =       "P. Sharma",
+    title =        "Evolution of Mobile Wireless Communication
+Networks - 1G to 5G as well as Future Prospective
+of Next Generation Communication Network",
+    journal =      "International Journal of Computer Science and Mobile Computing 
+",
+    volume =       "2",
+    number =       "8",
+    pages =        "47-53",
+    year =         "2013"
 }
