--- a/main.tex
+++ b/main.tex
@@ -27,17 +27,18 @@ Since the momentous event of the first mobile phone call over a cellular network
 In this literature review, we will first discuss briefly the history of mobile communications, as well as current technologies in the fourth generation of mobile communications standards. The review will focus mainly on proposed key technologies for the fifth generation (5G) of standards, and the possible applications of 5G.
 
 \subsection{A Brief History}
-First phone call, maybe brief description of each generation / changes they brought. Milestones like text messaging/internet on phones/smartphones.
+In April 1973, head of Motorola's communication systems division, Martin Cooper, made the first wireless phone call from a hand-held device to Bell Labs, a rival of Motorola \cite{tomfarhist}. This event paved the way for subsequent wireless communication, allowing for analog wireless phone conversations, with the first generation of mobile communications standards being deployed around the developed world between 1979 and 1982 \cite{evolution}. A decade later the second generation of standards, 2G, was introduced, providing digitally encrypted phone conversations and simple data transfer. 2G was more secure than 1G and provided us with the ability to send text messages, with the first SMS being sent in 1992. As the World Wide Web became more accessible to the average person in the mid-late 1990s, the dream of accessing the internet wirelessly began, and third generation (3G) of standards began development. The first commercial 3G networks were rolled out across the world between 2001 and 2004, and provided data transfer speeds of up to 3Mbps \cite{tomfarhist} as well as access to the internet through mobile browsers. As this technology became more widespread and everyday use of the internet continued to grow, it became evident that 3G was no longer enough.
 % Previous Generations
 % https://www.edn.com/electronics-blogs/edn-moments/4411258/1st-mobile-phone-call-is-made--April-3--1973
 % 1G - the first phones, being able to make a phone call.
 % 2G - slightly smaller devices, could send text messages.
 % 3G - first smartphones, could handle basic internet/webpages etc.
 % 4G - advanced smartphones, very fast - personal tests on phone peak at 70mbps download speed, average at around 15mbps.
-\subsection{Current Technologies}
+\subsection{Fourth Generation and Current Technologies}
+
 Probably short, discuss 4G and technologies, focus on problems, lack of bandwidth etc - how to make more room / handle more at the same time etc. More devices = slower / more crowded.
 
-\section{5G and its Proposed Technologies}
+\section{Fifth Generation}
 \subsection{What is 5G?}
 \subsection{Millimetre Waves}
 \subsection{Small Cells}
