Deployment of 4g done, moving onto 4g technologies

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -36,10 +36,24 @@
     title =        "Evolution of Mobile Wireless Communication
 Networks - 1G to 5G as well as Future Prospective
 of Next Generation Communication Network",
-    journal =      "International Journal of Computer Science and Mobile Computing 
-",
+    journal =      "International Journal of Computer Science and Mobile Computing",
     volume =       "2",
     number =       "8",
     pages =        "47-53",
     year =         "2013"
+}
+
+@misc{bbc4g,
+% Joe Miller, BBC News
+    author    = "J. Miller",
+    publisher = "BBC News",
+    title     = "Vodafone and O2 Begin Limited Roll-Out of 4G Networks",
+    url       = "www.bbc.com/news/technology-23868082"
+}
+
+@misc{gartner4g,
+% Gartner
+    author    = "Gartner",
+    title     = "4G Standard",
+    url       = "https://www.gartner.com/it-glossary/4g-standard/",
 }
