--- a/main.tex
+++ b/main.tex
@@ -22,12 +22,16 @@ This will be the abstract - short passage, intro, basic ideas, what review will 
 \end{IEEEkeywords}
 
 \section{Introduction}
-In recent years, particularly the last decade, the mobile telecommunications industry has enjoyed rapid growth and countless advancements in its technology. From the introduction of first generation wireless cellular technology (1G) in the 1980s, right up to the fourth generation (4G) available in most countries around the world today, we have seen exponential improvement in services.\\
-Since the momentous event of the first mobile phone call over a cellular network in 1973 \cite{tomfarhist}, the way we share information and communicate with one another has changed dramatically. Technology now surrounds us in everyday life, with the smartphone being the device of choice for most of the developed world. We expect to almost always be connected, and also be provided with fast communication speeds and a reliable connection with little to no down-time. With the introduction of social media in particular, we are now generating massive amounts of data and require more robust networks to handle such data. In \cite{whatwill5gbe}, Andrews et al claim that the amount of IP data handled by wireless networks would increase from around 3 exabytes in 2010, to 190 exabytes in 2018. Our current demands and expectations regarding data creation and transfer, coupled with an estimated 20 billion devices connected to the internet in 2017 \cite{ihsmarkit} and that number set to increase exponentially, means our networks are facing a worldwide shortage in bandwidth.\\
-In this literature review, we will first discuss briefly the history of mobile communications, as well as current technologies in the fourth generation of mobile communications standards. The review will focus mainly on proposed key technologies for the fifth generation (5G) of standards, and the possible applications of 5G.
+In recent years, particularly the last decade, the mobile telecommunications industry has enjoyed rapid growth and countless advancements in its technology. From the introduction of first generation wireless cellular technology \textit{(1G)} in the 1980s, right up to the fourth generation \textit{(4G)} available in most countries around the world today, we have seen exponential improvement in services.
+
+Since the momentous event of the first mobile phone call over a cellular network in 1973 \cite{tomfarhist}, the way we share information and communicate with one another has changed dramatically. Technology now surrounds us in everyday life, with the smartphone being the device of choice for most of the developed world. We expect to almost always be connected, and also be provided with fast communication speeds and a reliable connection with little to no down-time. With the introduction of social media in particular, we are now generating massive amounts of data and require more robust networks to handle such data. In \cite{whatwill5gbe}, Andrews et al claim that the amount of IP data handled by wireless networks would increase from around 3 exabytes in 2010, to 190 exabytes in 2018. Our current demands and expectations regarding data creation and transfer, coupled with an estimated 20 billion devices connected to the internet in 2017 \cite{ihsmarkit} and that number set to increase exponentially, means our networks are facing a worldwide shortage in bandwidth.
+
+In this literature review, we will first discuss briefly the history of mobile communications, as well as current technologies in the fourth generation of mobile communications standards. The review will focus mainly on proposed key technologies for the fifth generation \textit{(5G)} of standards, and the possible applications of 5G.
 
 \subsection{A Brief History}
-In April 1973, head of Motorola's communication systems division, Martin Cooper, made the first wireless phone call from a hand-held device to Bell Labs, a rival of Motorola \cite{tomfarhist}. This event paved the way for subsequent wireless communication, allowing for analog wireless phone conversations, with the first generation of mobile communications standards being deployed around the developed world between 1979 and 1982 \cite{evolution}. A decade later the second generation of standards, 2G, was introduced, providing digitally encrypted phone conversations and simple data transfer. 2G was more secure than 1G and provided us with the ability to send text messages, with the first SMS being sent in 1992. As the World Wide Web became more accessible to the average person in the mid-late 1990s, the dream of accessing the internet wirelessly began, and third generation (3G) of standards began development. The first commercial 3G networks were rolled out across the world between 2001 and 2004, and provided data transfer speeds of up to 3Mbps \cite{tomfarhist} as well as access to the internet through mobile browsers. As this technology became more widespread and everyday use of the internet continued to grow, it became evident that 3G was no longer enough.
+In April 1973, head of Motorola's communication systems division, Martin Cooper, made the first wireless phone call from a hand-held device to Bell Labs, a rival of Motorola \cite{tomfarhist}. This event paved the way for subsequent wireless communication, allowing for analog wireless phone conversations, with the first generation of mobile communications standards being deployed around the developed world between 1979 and 1982 \cite{evolution}. A decade later the second generation of standards, 2G, was introduced, providing digitally encrypted phone conversations and simple data transfer. 2G was more secure than 1G and provided us with the ability to send text messages, with the first SMS being sent in 1992. 
+
+As the World Wide Web became more accessible to the average person in the mid-late 1990s, the dream of accessing the internet wirelessly began, and third generation \textit{(3G)} of standards began development. The first commercial 3G networks were deployed across the world between 2001 and 2004, and provided data transfer speeds of up to 3Mbps \cite{tomfarhist} as well as access to the internet through mobile browsers. As this technology became more widespread and everyday use of the internet continued to grow, it became evident that 3G was no longer enough.
 % Previous Generations
 % https://www.edn.com/electronics-blogs/edn-moments/4411258/1st-mobile-phone-call-is-made--April-3--1973
 % 1G - the first phones, being able to make a phone call.
@@ -35,6 +39,9 @@ In April 1973, head of Motorola's communication systems division, Martin Cooper,
 % 3G - first smartphones, could handle basic internet/webpages etc.
 % 4G - advanced smartphones, very fast - personal tests on phone peak at 70mbps download speed, average at around 15mbps.
 \subsection{Fourth Generation and Current Technologies}
+As mobile devices became more advanced in the late 2000s, it became clear that we needed a new generation of mobile communications capable of meeting our demands. Unlike the migration from 1G to 2G, and 2G to 3G, the creation of a fourth generation \textit{(4G)} of standards did not provide any additional services from the user's point of view, rather an improvement on existing services. By 2012, 4G LTE \textit{(Long Term Evolution)} networks had already been implemented in countries such as Sweden and the United States, and initial deployments were beginning the United Kingdom \cite{bbc4g}. 
+
+According to Gartner \cite{gartner4g}, 4G provides users with peak data transfer speeds of 100 \textit{megabytes-per-second}. While these speeds were promised on paper, this is still far from reality for the majority of mobile users.
 
 Probably short, discuss 4G and technologies, focus on problems, lack of bandwidth etc - how to make more room / handle more at the same time etc. More devices = slower / more crowded.
 
