Finishing off 4G section

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -57,3 +57,10 @@ of Next Generation Communication Network",
     title     = "4G Standard",
     url       = "https://www.gartner.com/it-glossary/4g-standard/",
 }
+
+@misc{ericssondev,
+% Ericsson
+    author    = "Ericsson",
+    title     = "Internet of Things Outlook, June 2017",
+    url       = "https://www.ericsson.com/en/mobility-report/internet-of-things-outlook",
+}
