--- a/main.tex
+++ b/main.tex
@@ -32,18 +32,13 @@ In this literature review, we will first discuss briefly the history of mobile c
 In April 1973, head of Motorola's communication systems division, Martin Cooper, made the first wireless phone call from a hand-held device to Bell Labs, a rival of Motorola \cite{tomfarhist}. This event paved the way for subsequent wireless communication, allowing for analog wireless phone conversations, with the first generation of mobile communications standards being deployed around the developed world between 1979 and 1982 \cite{evolution}. A decade later the second generation of standards, 2G, was introduced, providing digitally encrypted phone conversations and simple data transfer. 2G was more secure than 1G and provided us with the ability to send text messages, with the first SMS being sent in 1992. 
 
 As the World Wide Web became more accessible to the average person in the mid-late 1990s, the dream of accessing the internet wirelessly began, and third generation \textit{(3G)} of standards began development. The first commercial 3G networks were deployed across the world between 2001 and 2004, and provided data transfer speeds of up to 3Mbps \cite{tomfarhist} as well as access to the internet through mobile browsers. As this technology became more widespread and everyday use of the internet continued to grow, it became evident that 3G was no longer enough.
-% Previous Generations
-% https://www.edn.com/electronics-blogs/edn-moments/4411258/1st-mobile-phone-call-is-made--April-3--1973
-% 1G - the first phones, being able to make a phone call.
-% 2G - slightly smaller devices, could send text messages.
-% 3G - first smartphones, could handle basic internet/webpages etc.
-% 4G - advanced smartphones, very fast - personal tests on phone peak at 70mbps download speed, average at around 15mbps.
+
 \subsection{Fourth Generation and Current Technologies}
 As mobile devices became more advanced in the late 2000s, it became clear that we needed a new generation of mobile communications capable of meeting our demands. Unlike the migration from 1G to 2G, and 2G to 3G, the creation of a fourth generation \textit{(4G)} of standards did not provide any additional services from the user's point of view, rather an improvement on existing services. By 2012, 4G LTE \textit{(Long Term Evolution)} networks had already been implemented in countries such as Sweden and the United States, and initial deployments were beginning the United Kingdom \cite{bbc4g}. 
 
-According to Gartner \cite{gartner4g}, 4G provides users with peak data transfer speeds of 100 \textit{megabytes-per-second}. While these speeds were promised on paper, this is still far from reality for the majority of mobile users.
+According to Gartner \cite{gartner4g}, 4G provides users with peak data transfer speeds of 100Mbps (\textit{megabits-per-second}). While these speeds on paper are attractive, the actual speed a user may experience may be significantly less and depends on a variety of different factors, such as network traffic levels and signal strength. With current 4G networks operating on radio waves, which broadcast under 6GHz on the frequency spectrum, this means every device connected to the network uses this small band in the spectrum. Estimates of total number of connected devices (including landlines, mobile phones, televisions and kettles to name a few) are currently at 17-18 billion \cite{ericssondev}, with this number increasing rapidly. This growing number implies the band of frequency used for 4G is already becoming too crowded and will continue to worsen, leading to slower speeds for users. Herein lies possibly 4G's greatest problem.
 
-Probably short, discuss 4G and technologies, focus on problems, lack of bandwidth etc - how to make more room / handle more at the same time etc. More devices = slower / more crowded.
+While our present problems of signal loss or slow speeds at peak times may not be considered critical issues, the desire for a faster, more efficient service will always drive advancements in communications standards. Much like the transition from 3G to 4G, our next family of standards will not concern an expansion of service, but rather an improvement on existing services using new technologies.
 
 \section{Fifth Generation}
 \subsection{What is 5G?}
