Working on 3 core ideas of 5g

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -64,3 +64,10 @@ of Next Generation Communication Network",
     title     = "Internet of Things Outlook, June 2017",
     url       = "https://www.ericsson.com/en/mobility-report/internet-of-things-outlook",
 }
+
+@misc{ieee5g,
+% IEEE defined standards
+    author    = "Institute  of  Electrical  and  Electronics  Engineers",
+    title     = "Standards - 5G",
+    url       = "https://5g.ieee.org/standards",
+}
