--- a/main.tex
+++ b/main.tex
@@ -33,15 +33,23 @@ In April 1973, head of Motorola's communication systems division, Martin Cooper,
 
 As the World Wide Web became more accessible to the average person in the mid-late 1990s, the dream of accessing the internet wirelessly began, and third generation \textit{(3G)} of standards began development. The first commercial 3G networks were deployed across the world between 2001 and 2004, and provided data transfer speeds of up to 3Mbps \cite{tomfarhist} as well as access to the internet through mobile browsers. As this technology became more widespread and everyday use of the internet continued to grow, it became evident that 3G was no longer enough.
 
-\subsection{Fourth Generation and Current Technologies}
+\subsection{Fourth Generation and Current Limitations} \label{subsec:4g}
 As mobile devices became more advanced in the late 2000s, it became clear that we needed a new generation of mobile communications capable of meeting our demands. Unlike the migration from 1G to 2G, and 2G to 3G, the creation of a fourth generation \textit{(4G)} of standards did not provide any additional services from the user's point of view, rather an improvement on existing services. By 2012, 4G LTE \textit{(Long Term Evolution)} networks had already been implemented in countries such as Sweden and the United States, and initial deployments were beginning the United Kingdom \cite{bbc4g}. 
 
 According to Gartner \cite{gartner4g}, 4G provides users with peak data transfer speeds of 100Mbps (\textit{megabits-per-second}). While these speeds on paper are attractive, the actual speed a user may experience may be significantly less and depends on a variety of different factors, such as network traffic levels and signal strength. With current 4G networks operating on radio waves, which broadcast under 6GHz on the frequency spectrum, this means every device connected to the network uses this small band in the spectrum. Estimates of total number of connected devices (including landlines, mobile phones, televisions and kettles to name a few) are currently at 17-18 billion \cite{ericssondev}, with this number increasing rapidly. This growing number implies the band of frequency used for 4G is already becoming too crowded and will continue to worsen, leading to slower speeds for users. Herein lies possibly 4G's greatest problem.
 
-While our present problems of signal loss or slow speeds at peak times may not be considered critical issues, the desire for a faster, more efficient service will always drive advancements in communications standards. Much like the transition from 3G to 4G, our next family of standards will not concern an expansion of service, but rather an improvement on existing services using new technologies.
-
 \section{Fifth Generation}
+While our present problems of signal loss or slow speeds at peak times may not be considered critical issues, the desire for a faster, more efficient service will always drive advancements in communications standards. Much like the transition from 3G to 4G, our next family of standards will not concern an expansion of service, but rather an improvement on existing services using new technologies. 5G will bring more efficient communication methods, thus allowing for faster movement of data coupled with increased reliability.
+
 \subsection{What is 5G?}
+The standards for 5G are continuously being reviewed, but the Institute of Electrical and Electronics Engineers \textit{(IEEE)} have set out three core features of 5G \cite{ieee5g}, outlined below. 
+
+\textit{1) Massive Connectivity}. The \textit{Internet of Things} is defined as the point in time where the number physical devices connected to the internet overtook the number of people connected. The ever-growing expanse of the Internet of Things suggests that 5G networks will have to be capable of handling enormous numbers of non-traditional devices, such as fridges, televisions, kettles, home heating, and lighting, for example.
+
+\textit{2) Capacity Enhancement}. As mentioned in \ref{subsec:4g}, our current 4G networks are struggling under increasing numbers of devices. While no prediction is certain, in June 2017 Ericsson predicted the number of connected devices to rise from 17-18 billion in 2017, to 29 billion by 2022 \cite{ericssondev}. Regardless of how accurate this prediction may come to be, one simply has to look at the increase from approximately 13 billion devices recorded in 2014 \cite{ericssondev} to today, to understand how critical it is that we allow for future growth at the same rate, if not higher. Increase in capacity must therefore be core to any future generation of mobile communications.
+
+\textit{3) Ultra High Reliability and Low Latency}
+
 \subsection{Millimetre Waves}
 \subsection{Small Cells}
 \subsection{Massive MIMO: Multiple Input Multiple Output}
